fix: change the block display to visibility

--- a/src/views/Timer/components/CountDownTimer/CountDownTimer.module.css
+++ b/src/views/Timer/components/CountDownTimer/CountDownTimer.module.css
@@ -1,9 +1,14 @@
 .show {
-  display: block;
+  visibility: visible;
+  opacity: 1;
+  position: static;
 }
 
 .dontShow {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
 }
 
 .timerContainer {
